--- a/Mods ChoGGi/Standing Unlocks Sponsor Buildings/changes.txt
+++ b/Mods ChoGGi/Standing Unlocks Sponsor Buildings/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Shows a notification msg when unlocked buildings have changed.
+
 v0.3
 Checks standing on loaded game (thanks D_A_R_K_N_E_S_S).
 
