--- a/Mods ChoGGi/RC Tanker/changes.txt
+++ b/Mods ChoGGi/RC Tanker/changes.txt
@@ -1,3 +1,7 @@
+v0.6
+I'd made the default 5 when updating to evans, it's now 0 again.
+Also make it step by 50 units and made the max 10K.
+
 v0.5
 Evans update.
 
