--- a/Mods ChoGGi/math. Functions/changes.txt
+++ b/Mods ChoGGi/math. Functions/changes.txt
@@ -1,5 +1,9 @@
+v0.6
+Cleaned up the code a tad.
+
 v0.5
 Da Vinci
+
 v0.4
 Changed:
 .log(number,NaN) would assume NaN was Napier's constant, now it errors out.
