Expanded Cheat Menu: - Minor code cleanup.
Mods:

Construction Extend Length 0.5:
v0.5
Issue from v0.4.
v0.4
Options weren't being applied when applying them (thanks Jarcionek).

RC Garage 0.9:
Log spam.

Research Filter 1.1:
Update for newly unlocked tech (thanks Jarcionek).

WasteRock Prod Info 0.4:
Dialog stuck on screen when no deposits (Thanks jfffj).

github@choggi.org

--- a/Mods ChoGGi/RC Garage/changes.txt
+++ b/Mods ChoGGi/RC Garage/changes.txt
@@ -1,3 +1,6 @@
+v0.9
+Log spam.
+
 v0.8
 Added button to change main garage.
 Too much power was being used by main garage (switch mains or move a rover to update).
