--- a/Mods ChoGGi/Drone Controller Show Available Resources/changes.txt
+++ b/Mods ChoGGi/Drone Controller Show Available Resources/changes.txt
@@ -1,3 +1,6 @@
+v0.6
+Fixed bug where mouse buttons stopped working after cancelling self-sufficient dome (Thanks Gamera).
+
 v0.5
 Removed log spam when placing dome/passage (thanks LukeH).
 Old count was left when leaving of range of resources.
