Expanded Cheat Menu/Lib:
- Version bump.

### Fixed:
- Console log text was always active.
- Some missing text in cheat menu.

Mods:
Base Walls 0.4:
Added Change skin for ramps.
Changing length of wall doesn't reset skin anymore.

Cycle Skin All Buildings:
Hold down Ctrl (I think the gamepad key is X?) to cycle the skins of all buildings (of the same type) instead of just selected.

github@choggi.org

--- a/Mods ChoGGi/Base Walls/changes.txt
+++ b/Mods ChoGGi/Base Walls/changes.txt
@@ -1,3 +1,7 @@
+v0.4
+Added Change skin for ramps.
+Changing length of wall doesn't reset skin anymore.
+
 v0.3
 Fixed a bug that's been around for awhile (thanks Pharaoh).
 
