Expanded Cheat Menu:
### Fixed:
- Examine Log spam (thanks LukeH).
- Workers auto/manual in cheats section wasn't working (thanks JEFJ).

Mods:

Drone Controller Show Available Resources 0.7/Infobar More Info 1.5/Passenger Rocket Tweaks 1.1:
Log spam when certain mods installed (thanks SkiRich/willdog38).

github@choggi.org

--- a/Mods ChoGGi/Drone Controller Show Available Resources/changes.txt
+++ b/Mods ChoGGi/Drone Controller Show Available Resources/changes.txt
@@ -1,3 +1,6 @@
+v0.7
+Log spam when certain mods installed (thanks SkiRich/willdog38).
+
 v0.6
 Fixed bug where mouse buttons stopped working after cancelling self-sufficient dome (Thanks Gamera).
 
