--- a/Mods ChoGGi/Infobar More Info/changes.txt
+++ b/Mods ChoGGi/Infobar More Info/changes.txt
@@ -1,3 +1,6 @@
+v1.6
+Log spam when certain mods installed (thanks SkiRich/willdog38).
+
 v1.5
 Log spam when certain mods installed (thanks SkiRich/willdog38).
 
