--- a/Mods ChoGGi/All Sponsor Buildings/todo.txt
+++ b/Mods ChoGGi/All Sponsor Buildings/todo.txt
@@ -1,1 +1,4 @@
+Would you ever consider a version of this mod where items are unlocked with appropriate tech? EG: Lock Advanced Sterling Generator until you unlock the tech that gives you Sterling Generators?
+
+
 unlock cargo as well
