--- a/Mods ChoGGi/Disable Annoying Sounds/todo.txt
+++ b/Mods ChoGGi/Disable Annoying Sounds/todo.txt
@@ -1,6 +1,11 @@
-RC Seeker 
+ geyser sound effect!
+ 
+ RC Seeker 
 cold wave sounds
 
 biorobotics workshop
 
 20 hours in, the BROORP from every production and service building is just so annoying... disable/replace?
+
+
+lady telling you research is done
