Expanded Cheat Menu: ### Added: - Cheats>Delete Geysers: Remove all geyser activity from the map (permanent per-save).
Mods:
Infobar More Info 1.7:
Added mod option to disable transparent infobar.

NROL Mission Badges 0.2:
Added more badges:
NRO logo, 38, 47, 66, 151

Passages Use Empty Hexes 0.4:
Fix for bug last (none) update.

github@choggi.org

--- a/Mods ChoGGi/Passages Use Empty Hexes/changes.txt
+++ b/Mods ChoGGi/Passages Use Empty Hexes/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Fix for bug last (none) update.
+
 v0.3
 Added mod option: Show usable hexes: Show hexes that can connect domes when placing passages.
 Press numpad 6 to toggle showing usable hexes.
