--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", " Text"
-302535920000981,
-302535920000983,
 302535920000985,
 302535920000986,
 302535920000990,
@@ -798,6 +796,9 @@ Use with <green>%s</green> to fill up a dome with spires."
 302535920000230, "Remove Building Limits"
 302535920000231, "Buildings can be placed almost anywhere.
 See also %s."
+302535920000981, "Delete Geysers"
+302535920000983, "Remove all geyser activity from the map (permanent per-save).
+You will not be able to build on them without also enabling <green>ECM>Buildings>Toggles>%s</green>."
 302535920000840, "All colonists spawn as this age."
 302535920000931, "Spawn POIs"
 302535920000934, "POI"
