Expanded Cheat Menu:
### Added:
- Cheats>Delete Geysers: Remove all geyser activity from the map (permanent per-save).
- ToggleFrozen to cheats section for selection panel of heat sensitive buildings.

Restore Request Maintenance 1.1:
Added fix for frozen buildings that start a maintenance request during a cold wave and drones don't repair till after cold wave ends.

Shuttles Fly During Duststorm:
Title pretty much says it all (Wasp Drones as well).

github@choggi.org

--- a/Mods ChoGGi/Passages Use Empty Hexes/changes.txt
+++ b/Mods ChoGGi/Passages Use Empty Hexes/changes.txt
@@ -1,5 +1,5 @@
 v0.4
-Fix for bug last (none) update.
+Fix for bug last (non) update.
 
 v0.3
 Added mod option: Show usable hexes: Show hexes that can connect domes when placing passages.
