--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -44,6 +44,7 @@
 302535920001400, "ChoGGi"
 302535920000887, "ECM"
 302535920000000, "Expanded Cheat Menu"
+302535920001586, "All Done!"
 302535920001453, "Completed"
 302535920001026, "Update Text"
 302535920001449, "Export"
@@ -262,7 +263,7 @@ You can copy and paste numbers if you want."
 302535920001440, "<green>~</green><yellow>obj</yellow> opens object in examine dlg, use <color red>ex(obj)</color> in lua code.
 <green>~!</green><yellow>obj</yellow> opens object's attachments in examine dlg.
 
-<green>&</green><yellow>handle</yellow> examines object with that handle.
+<green>&</green><yellow>handle</yellow> examine object using handle id.
 
 <green>@</green><yellow>GetMissionSponsor</yellow> prints file name and line number of function, use <color red>format_value(obj)</color> in lua code.
 
@@ -798,7 +799,7 @@ Use with <green>%s</green> to fill up a dome with spires."
 See also %s."
 302535920000981, "Delete Geysers"
 302535920000983, "Remove all geyser activity from the map (permanent per-save).
-You will not be able to build on them without also enabling <green>ECM>Buildings>Toggles>%s</green>."
+You will not be able to build on the area without also enabling <green>ECM>Buildings>Toggles>%s</green>."
 302535920000840, "All colonists spawn as this age."
 302535920000931, "Spawn POIs"
 302535920000934, "POI"
@@ -1651,7 +1652,6 @@ Not noticeable unless using higher zoom."
 302535920000655, "Toggle Cursor"
 302535920000656, "Toggle between moving camera and selecting objects."
 302535920000221, "See log for any batch errors."
-302535920001586, "All Done!"
 302535920001572, "<color red>Pack Warning</color>: Will instantly crash SM when calling it a second time, pack the mod manually to workaround it.
 You can also stick the executable in the profile folder to use it instead (<green>no crashing</green>):
 <yellow>%s</yellow>."
