--- a/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
+++ b/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
@@ -1,3 +1,7 @@
+v0.6
+Added mod options to automagically remove colonists of certain traits (age, negative, other).
+I can add positive if anyone wants, just figured it wasn't something most people want...
+
 v0.5
 Doesn't remove colonists in passages (thanks Gunny).
 
