Mods: Added print msg for mods that return when DLC not installed.
Fix Colonists Long Walks 0.5:
Added some ()

Remove Unwanted Colonists 0.7:
Added positive traits to filter list.

github@choggi.org

--- a/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
+++ b/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
@@ -1,3 +1,6 @@
+v0.7
+Added positive traits to filter list.
+
 v0.6
 Added mod options to automagically remove colonists of certain traits (age, negative, other).
 I can add positive if anyone wants, just figured it wasn't something most people want...
