--- a/Mods ChoGGi/Fix Missing Mod Buildings/changes.txt
+++ b/Mods ChoGGi/Fix Missing Mod Buildings/changes.txt
@@ -1,6 +1,11 @@
+v0.5
+Added mod option to disable mod.
+
 v0.4
 Da vinci
+
 v0.3
 Same as v0.2, though it doesn't cause "issues" just log spam.
+
 v0.2
 Disabled a fix that may do more harm than good (it was just for removing some errors from log).
