Expanded Cheat Menu:
Version Bump.

Mods:

Artificial Sun Range 0.2:
Forgot to make it update range for newly built suns.

Construction Show Heater Range:
Shows heat radius around Subsurface Heaters when you're in construction mode.
Press Numpad 7 to toggle grids anytime (rebind in game options).

Game Rules Breakthroughs 0.8:
Mod option to research tech wasn't working.
v0.7
Added mod option to disable sorting breakthrough list.
Added game rule to unlock/research all breakthroughs.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 "ID", " Text"
-302535920000985,
 302535920000986,
 302535920000990,
 302535920001066,
@@ -160,6 +159,7 @@
 302535920000854, "Results Found"
 302535920000219, "Export viewed image to <green>%s</green>."
 302535920000109, "Invalid Image"
+302535920000985, "Toggle frozen state of building."
 302535920000977, "Change grade of a deposit."
 302535920001617, "Toggle opening all dome glass (for screenshots?)."
 302535920001598, "Reset shuttle control amount to default."
